package standard

/**
Strategy(抽象策略类)
*/
type Strategy interface {
	StrategyMethod()
}
